force-app/main/default/objects/Key_Account_Pricing__c/Key_Account_Pricing__c.object-meta.xml
<CustomObject>
    <label>Key Account Pricing</label>
    <nameField>
        <displayFormat>KAP-{0000000}</displayFormat>
        <label>Key Account Pricing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Account Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>