force-app/main/default/objects/Key_Account_Pricing__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Key Account Pricings</relationshipLabel>
    <relationshipName>Key_Account_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>