force-app/main/default/objects/Key_Account_Pricing__c/fields/Customer_KAP_price__c.field-meta.xml
<CustomField>
    <fullName>Customer_KAP_price__c</fullName>
    <label>Customer KAP price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>