force-app/main/default/objects/Key_Account_Pricing__c/fields/Valid_to__c.field-meta.xml
<CustomField>
    <fullName>Valid_to__c</fullName>
    <label>Valid to</label>
    <type>Date</type>
</CustomField>