force-app/main/default/objects/Key_Account_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Material_Number__c</columns>
    <columns>Customer_KAP_price__c</columns>
    <columns>Customer__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>Price_List_Type__c</columns>
    <columns>Valid_from__c</columns>
    <columns>Valid_to__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>